# Prediction-Temporal-Series

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: choose.md  deployment_template.md  eda_template.md  modeling_template.md
.github/pull_request_template/: choose.md
.github/workflows/: ci.yml
notebooks/: 01_EDA_in_R.Rmd  02_Modeling_in_Python.ipynb  02_Preprocessing_and_FE_in_Python.ipynb  03_Baseline_Modeling.ipynb  04_ML_Modeling.ipynb
src/metrics/: evaluation.py
src/models/: baseline_models.py
src/visualization/: plot_utils.py
