[tool.poetry]
name = "prediction-temporal-series"
version = "0.1.0"
description = "Energy consumption forecasting using time series data"
authors = ["Alejandro Matías Astorga <alejandromatiasastorga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.5"
matplotlib = "^3.10.3"


[tool.poetry.group.dev.dependencies]
kaggle = "^1.7.4.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
