[tool.poetry]
name = "prediction-temporal-series"
version = "0.1.0"
description = "Energy consumption forecasting using time series data"
authors = ["Alejandro Matías Astorga <alejandromatiasastorga@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"

[tool.mypy]
packages = ["src"]
explicit_package_bases = true
ignore_missing_imports = true


[tool.poetry.group.dev.dependencies]
kaggle = "^1.7.4.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.12.3"
mypy = "^1.17.0"
nbstripout = "^0.8.1"
nbqa = "^1.9.1"
pandas-stubs = "^2.3.0.250703"
commitizen = "^4.8.3"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
